# android-vendor-cafrisoft-lib

./: .gitignore  Android.mk  README.md  ReadMe.txt  device-vendor.mk
App/: Android.mk
App/Client/: Android.mk
App/Client/Control/: main.cpp
App/Client/DataAcqUDP/: main.cpp
App/Client/FileSync/: Android.mk  FileSync.hpp  main.cpp
App/Client/HubCalCRC/: main.cpp
App/Control/: Android.mk
App/Control/AgingRun/: main.cpp
App/Control/FlashWriter/: Android.mk  main.cpp
App/Control/Hub/: AppDefine.h  AppGlobal.cpp  AppGlobal.hpp  CommanderAgent.cpp  CommanderAgent.hpp  CommanderAgentOperator.cpp  CommanderAgentOperatorCmdProc.cpp  CommanderAgentOperatorSockCallback.cpp  CommanderAgentTester.cpp  CommanderAgentTesterCmdProc.cpp  CommanderAgentTesterExtern.cpp  CommanderAgentTesterSockCallback.cpp  Notifier.cpp  Notifier.hpp  NotifierExtern.cpp  NotifierOperator.cpp  NotifierTester.cpp  main.cpp
App/Control/Operator/: App.cpp  App.hpp  AppDefine.hpp  Cmd.hpp  CmdFileSync.cpp  CmdHubStatus.cpp  CmdTED.cpp  CmdTesterStatus.cpp  CmdVerify.cpp  HubStatus.cpp  HubStatus.hpp  TesterStatus.cpp  TesterStatus.hpp  main.cpp
App/Control/Shell/: Android.mk  AppDefine.hpp  Cmd.hpp  CmdAndroid.cpp  CmdDatabase.cpp  CmdDraw2D.cpp  CmdEmulator.cpp  CmdExport.cpp  CmdFileSync.cpp  CmdHub.cpp  CmdMySQL.cpp  CmdOALTest.cpp  CmdSocket.cpp  CmdStringTest.cpp  CmdSysTest.cpp  CmdTED.cpp  CmdTester.cpp  CmdVerify.cpp  main.cpp
App/Control/Tester/: Android.mk  App.cpp  App.hpp  TESysTester.rc  main.cpp
App/Database/MySQL/: AppCmdProc.cpp  AppCmdProc.hpp  AppDefine.hpp  Cmd.hpp  CmdExport.cpp  CmdInsert.cpp  CmdVerify.cpp  export.cpp  insert.cpp  main.cpp  mysql.cpp
App/Database/RawData/: AppCmdProc.cpp  AppCmdProc.hpp  AppDefine.h  Receiver.cpp  Receiver.hpp  ReceiverDataAcq.cpp  ReceiverExportCSV.cpp  ReceiverExtern.cpp  ReceiverRawDataSaver.cpp  main.cpp
App/Database/VerifyRawData/: main.cpp
App/Server/: Android.mk
App/Server/DataAcq/: AppDefine.h  Notifier.cpp  Notifier.hpp  NotifierExporter.cpp  NotifierTCPServer.cpp  NotifierTester.cpp  main.cpp
App/Server/PatternDraw/: AppDefine.h  NotifierExtern.cpp  NotifierRawDataSaver.cpp  PatternDraw.cpp  PatternDraw.hpp  PatternDrawTCPServer.cpp  main.cpp
App/Server/RemotePython/: Aging.cpp  Android.mk  DD.cpp  DataAcq.cpp  Debug.cpp  LdoAdc.cpp  Mipi.cpp  Pattern.cpp  RegAdc.cpp  RemotePython.hpp  SoutAdc.cpp  Sys.cpp  TESysRemotePython.rc  TxtCmd.cpp  VciAdc.cpp  Vlin1Adc.cpp  main.cpp
App/Test/: Android.mk
App/Test/ControlTesterEmul/: Android.mk  CmdTesterMgr.cpp  CmdTesterMgr.hpp  main.cpp
App/Test/OAL/: TestLog.cpp  TestSleep.cpp  TestSting.cpp  TestTimer.cpp  main.cpp
App/Test/TCPClient/: main.cpp
App/Test/TCPServer/: main.cpp
App/Test/TED/: main.cpp
App/Test/UDPClient/: main.cpp
App/Test/UDPServer/: main.cpp
App/Tools/TMD2Python/: main.cpp
Comm/: Android.mk  VarType.cpp  VarType.hpp
Comm/API/: Base.h  Packet.hpp
Comm/Base/: Object.cpp  Object.hpp  ObjectAPI.cpp
Comm/DataEx/: Consumer.cpp  Consumer.hpp  Exchanger.cpp  Exchanger.hpp  Producer.cpp  Producer.hpp
Comm/Database/: QueryResult.hpp
Comm/Database/RDBMS/: MySQL.cpp  MySQL.hpp  Product.hpp  Product_Comm_Database.cpp
Comm/Database/SQL/: QueryStatement.hpp  QueryStatement_Comm_Database_SQL.cpp
Comm/Database/Table/: Column.hpp  Column_Database_Table.cpp  Header.hpp  Header_Comm_Database.cpp
Comm/Draw2D/: Fourcc.hpp  v4l2_fourcc_def.h  v4l2_linux_videodev2.h
Comm/Draw2D/File/: Bmp.hpp  Bmp_Comm_Draw2D_File.cpp
Comm/Draw2D/Txt/: FreeType.hpp  FreeType_Comm_Draw2D_Txt.cpp
Comm/Global/: BuildOptions.h  TemplateList.hpp  Types.h  pch.cpp
Comm/Global/OS/: Android.h  Common.h  Linux.h  Win.h
Comm/Math/Filter/: Base.cpp  Base.hpp  MvAvg.cpp  MvAvg.hpp
Comm/NetUtils/: FTPClient.cpp  FTPClient.hpp  FTPClient_libftp.cpp  FTPClient_libftp.hpp  FTPDefine.h
Comm/OAL/: Cond.cpp  Cond.hpp  CondLinux.cpp  CondLinux.hpp  CondWin.cpp  CondWin.hpp  CriticalSection.cpp  CriticalSection.hpp  CriticalSectionLinux.cpp  CriticalSectionLinux.hpp  CriticalSectionWin.cpp  CriticalSectionWin.hpp  DateTime.hpp  DateTimeComm.cpp  Event.cpp  Event.hpp  EventWin.cpp  EventWin.hpp  EventWin_OAL_Comm.cpp  FileSys.hpp  FileSysComm.cpp  FileSysLinux.cpp  FileSysWin.cpp  HeaderFiles.hpp  Lock.cpp  Lock.hpp  Log.cpp  Log.hpp  LogAndroid.cpp  LogAndroid.hpp  LogLinux.cpp  LogLinux.hpp  LogWin.cpp  LogWin.hpp  Mutex.cpp  Mutex.hpp  MutexLinux.cpp  MutexLinux.hpp  MutexWin.cpp  MutexWin.hpp  (+31 more)
Comm/OpenSource/: ReadMe.txt
Comm/Property/: Path.hpp  Path_Comm_Property.cpp  System.hpp  System_Comm_Property.cpp
Comm/Shell/: CmdItem.cpp  CmdItem.hpp  CmdSet.cpp  CmdSet.hpp  Main.hpp  MainShell.cpp
Comm/Socket/: MyRILPacket.h  NetPacket.cpp  NetPacket.hpp  NetPacketFixed.cpp  NetPacketFixed.hpp  Utils.cpp  Utils.hpp  Utils_Comm_Socket.cpp
Comm/Socket/End/: TcpMultiServer.cpp  TcpMultiServer.hpp  TcpServer.cpp  TcpServer.hpp
Comm/Socket/TCP/: TCPClient.cpp  TCPClient.hpp  TCPClientLinux.cpp  TCPClientLinux.hpp  TCPClientWin.cpp  TCPClientWin.hpp  TCPServer.cpp  (+5 more)
Comm/Utils/: Android.cpp  Android.hpp  AndroidScreenCap.cpp  Android_Comm_Utils.cpp  ArgParser.cpp  ArgParser.hpp  CRC.cpp  CRC.hpp  Convert.cpp  Convert.hpp  Counter.cpp  Counter.hpp  HeaderFiles.hpp  IntegerCount.cpp  IntegerCount.hpp  LogFile.cpp  LogFile.hpp  Property.cpp  Property.hpp  PropertyObject.cpp  Property_Comm_Utils.cpp  Queue.hpp  StringTool.cpp  StringTool.hpp  TxtFile.cpp  TxtFile.hpp  TxtFile_Comm_Utils.cpp  Vector.hpp  argparse.c  argparse.h
Database/: QueryResult.hpp
Database/Global/: BuildOptions.h  Type.h  pch.cpp
Database/Join/: List.cpp  List.hpp
Database/RDBMS/: Base.cpp  Base.hpp  MySQL.cpp  MySQL.hpp
Database/Single/: Column.cpp  Column.hpp  Data.cpp  Data.hpp  Header.cpp  Header.hpp  Record.cpp  Record.hpp  Table.cpp  Table.hpp
os/linux/: TESysAppLinux.sln
os/linux-cmake/: CMakeLists.txt  service.restart.sh
os/linux-database/: CMakeLists.txt
os/linux-python/: CMakeLists.txt  Makefile
os/win/: MyCommPrj.sln  TESysAppWin.sln
pthread-win32/: sched.h
(+247 files in other folders)
